--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
             <a class="header-book-button button" href="index.html#join-us-id">
                 Book now
             </a> 
-            <!-- <button class="header-burger-button" type="button" title="Open menu">
+            <button class="header-burger-button" type="button" title="Open menu">
                 <span class="visually-hidden">Open menu</span>
                 <span class="header-burger-button-line"></span>
                 <span class="header-burger-button-line"></span>
                 <span class="header-burger-button-line"></span>
-            </button> -->
+            </button>
         </div>
 
     </header>
